--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
         "php-http/curl-client": "^1.7",
         "symfony/yaml": "^3.4",
         "nesbot/carbon": "^1.33",
-        "tightenco/collect": "5.4",
+        "tightenco/collect": "^5.3",
         "guzzlehttp/psr7": "^1.4",
         "psr/cache": "^1.0",
         "league/flysystem-memory": "^1.0",
-        "cache/filesystem-adapter": "^1.0"
+        "cache/filesystem-adapter": "^0.3.3"
     },
     "autoload": {
         "psr-4": {
